# cgcnn

./: .gitignore  pyproject.toml
cgcnn/data/: dataset.py
cgcnn/model/: __init__.py  model.py
cgcnn/trainer/: __init__.py  trainer.py
examples/train/: train.py
examples/train/data/: build_data.py  build_data_from_mp.py
